# llm_finetuning

./: .gitignore  pyproject.toml  requirements.txt
conf/: run.yaml
conf/experiment/: default.yaml
conf/experiment/deepseek_finetuning/: baseline.yaml  exp001.yaml
conf/logger/: mlflow.yaml
conf/model/: llm_finetune.yaml
conf/paths/: default.yaml
notebook/: huggingface-FT.ipynb  performance_comparison.ipynb
notebooks/: performance_comparison.ipynb  test.ipynb
output/cl-tohoku_bert-base-japanese-whole-word-masking/: classification_report.txt
output/facebook_opt-125m/: classification_report.txt
output/simple_classification/cl-tohoku_bert-base-japanese-whole-word-masking/: classification_report.txt  duration_time.json
src/base/: base_trainer.py
src/qlora/: argument.py  callbacks.py  dataset.py  model.py  run.py  trainer.py  utils.py
src/utils/: file.py  gcp.py  helper.py  logging.py  mlflow.py  utils.py
